--- a/views/admin/user/list.html
+++ b/views/admin/user/list.html
@@ -7,6 +7,7 @@
     <a data-pjax href="/admin/index">Home</a>
   </li>
   <li class="active">用户列表</li>
+  <a data-pjax href="/admin/user/add" class="btn btn-primary btn-xs pull-right">创建用户</a>
 </ol>
 
 <div class="row">
