--- a/views/layout/header.html
+++ b/views/layout/header.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" data-pjax href="/">PYTEAM</a>
+      <a class="navbar-brand" data-pjax href="/">FZMetroTeam</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -27,7 +27,7 @@
           <li><a href="/logout">退出</a></li>
         {% else %}
           <li><a href="/login">登录</a></li>
-          <li><a href="/register">注册</a></li>
+          <!-- <li><a href="/register">注册</a></li> -->
         {% endif %}
       </ul>
     </div><!-- /.navbar-collapse -->
