--- a/views/layout/layout.html
+++ b/views/layout/layout.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{page_title}}</title>
-  <link rel="shortcut icon" href="//yiiu.co/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   {# 本地的静态资源文件, 内网部署时请使用本地静态资源文件 #}
-  {# <link rel="stylesheet" href="/libs/bootstrap/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="/libs/bootstrap/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="/libs/datetimepicker/css/bootstrap-datetimepicker.min.css" />
-  <link rel="stylesheet" href="/libs/tribute/tribute.css" /> #}
+  <link rel="stylesheet" href="/libs/tribute/tribute.css" />
   {# cdn的静态资源文件 #}
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css" />
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tributejs/3.6.0/tribute.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tributejs/3.6.0/tribute.min.css" /> -->
 
   <link rel="stylesheet" href="/css/style.css"/>
   {% block page_css %}{% endblock %}
@@ -25,23 +25,23 @@
     {% block page_content %}{% endblock %}
   </div>
   {# 本地的静态资源文件, 内网部署时请使用本地静态资源文件 #}
-  {# <script src="/libs/jquery/jquery.min.js"></script>
+  <script src="/libs/jquery/jquery.min.js"></script>
   <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
   <script src="/libs/moment/moment-with-locales.js"></script>
   <script src="/libs/datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
   <script src="/libs/pjax/jquery.pjax.js"></script>
   <script src="/libs/tribute/tribute.min.js"></script>
   <script src="/libs/lodash/lodash.min.js"></script>
-  <script src="/libs/socket.io/socket.io.js"></script>#}
+  <script src="/libs/socket.io/socket.io.js"></script>
   {# cdn的静态资源文件 #}
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.pjax/2.0.1/jquery.pjax.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tributejs/3.6.0/tribute.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script> -->
   {% if _user %}
     <script>
       moment.locale('zh-cn');
